<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/Button320x50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/b320x50" />
    <Button
        android:id="@+id/Button320x100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/b320x100" />
    <Button
        android:id="@+id/Button300x250"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/b300x250" />

    <Button
        android:id="@+id/Button468x60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"        
        android:text="@string/b468x60" />

    <Button
        android:id="@+id/Button728x90"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"        
        android:text="@string/b728x90" />

    <Button
        android:id="@+id/ButtonSmartBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"      
        android:text="@string/SmartBanner" />

    <Button
        android:id="@+id/ButtonInterstitial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/Interstitial" />

     <Button
        android:id="@+id/ButtonCustomSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/CustomSize" />   
</LinearLayout>
</ScrollView>